release 0.4 (2007-11-xx)
- Updated URI template ordering to conform to latest changes in JAX-RS:
  "Sort the set of matching resource classes using the number of 
   characters in the regular expression not resulting from template 
   variables as the primary key and the number of matching groups 
   as a secondary key"
  This means that a URI template such as "/edit" will take precedence over 
  a URI template such as /{id}, where as previous this was not the case.
- Fixed issue 13: Create AbstractServletAdapter class that allows modification 
  of its WebApplication
  https://jersey.dev.java.net/issues/show_bug.cgi?id=13
  The servlet implementation has been split into two. The servlet,
  com.sun.ws.rest.spi.container.servlet.ServletContainer may be used
  directly or extended for additional configuration requirements.

release 0.3 (2007-09-21)
- ResourceConfig interface is modified to support a feature bag and property
  bag with documented standard features.
  DefaultResourceConfig is mutable implementation of ResourceConfig.
  The APT tool generates ResourceConfig classes that inherit from 
  DefaultResourceConfig.
- Created SPI container helper classes AbstractContainerRequest and
  AbstractContainerResponse.
  This makes it easier for developers to write and maintain their own
  containers. Previously it was necessary to implement the interfaces
  ContainerRequest and ContainerResponse or depend on the implementation 
  specific classes HttpRequestContextImpl and HttpResponseContextImpl.
- Fixed issue 8: apt tool silently overwrites existing web.xml by default
  The "noservlet" option used with the WebResourcesProcessorTask ant task
  has been removed so that by default Servlet is not assumed no overriding 
  of a web.xml occurs. A new option "servlet" replaces the old option and is 
  required to be set for the ant task (and apt tool) to generate a web.xml.
- Fixed issue 2: URI path matching should operate on the encoded path