@@ -1,11 +1,16 @@
 release 0.4 (2007-11-xx)
+- Support the @Encoded on class, method and method parameters.
+  https://jsr311.dev.java.net/nonav/javadoc/javax/ws/rs/Encoded.html
+  Advanced developers may work in the encoded space of URI parameters,
+  query parameters and matrix parameters by declaring this annotation on
+  a class, method or method parameter.
 - Updated URI template ordering to conform to latest changes in JAX-RS:
   "Sort the set of matching resource classes using the number of 
    characters in the regular expression not resulting from template 
    variables as the primary key and the number of matching groups 
    as a secondary key"
   This means that a URI template such as "/edit" will take precedence over 
-  a URI template such as /{id}, where as previous this was not the case.
+  a URI template such as /{id}, where as previously this was not the case.
 - Fixed issue 13: Create AbstractServletAdapter class that allows modification 
   of its WebApplication
   https://jersey.dev.java.net/issues/show_bug.cgi?id=13
